# PupilOptixLab

./: .gitignore  CMakeLists.txt
cmake/: FindTensorRT.cmake
example/: CMakeLists.txt
example/libtorch_test/: CMakeLists.txt  main.cpp  pass.h
example/tensorRT_test/: CMakeLists.txt  main.cpp  test_custom_kpn.h
framework/: CMakeLists.txt
framework/libtorch/: context.cpp  context.h  data_loader.h  nn_loader.cpp  nn_loader.h
framework/system/: system.cpp
framework/tensorRT/: context.h  logger.h  trt_denoiser.cpp  trt_denoiser.h
framework/tensorRT/plugin/: base_plugin.h  kpn_plugin.cpp  kpn_plugin.h  kpn_plugin_kernel.cu  plugin_register.h  trt_common.h  trt_serialize.h
framework/tensorRT/plugin/common/: plugin_register.h  trt_serialize.h
framework/tensorRT/plugin/kpn/: kpn_plugin.cpp  kpn_plugin.h  kpn_plugin_kernel.cu  kpn_plugin_kernel.cuh
